[gd_scene load_steps=4 format=3 uid="uid://cv6v62jyq7ojq"]

[ext_resource type="Script" path="res://UI/PlayerUI.gd" id="1_auopm"]
[ext_resource type="Texture2D" uid="uid://bscmanu6ljn0a" path="res://UI/HeartUIEmpty.png" id="2_0nksj"]
[ext_resource type="Texture2D" uid="uid://hhyf0egenabb" path="res://UI/HeartUIFull.png" id="3_msyid"]

[node name="PlayerUI" type="Control"]
layout_mode = 3
anchors_preset = 0
scale = Vector2(4, 4)
script = ExtResource("1_auopm")

[node name="HeartsEmpty" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 3.5
offset_top = 3.5
offset_right = 61.5
offset_bottom = 14.5
texture = ExtResource("2_0nksj")
stretch_mode = 1

[node name="HeartsFull" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 3.75
offset_top = 4.0
offset_right = 25.75
offset_bottom = 15.0
texture = ExtResource("3_msyid")
stretch_mode = 1

[node name="IronLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 18.0
offset_right = 23.0
offset_bottom = 41.0

[node name="WoodLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 18.0
offset_right = 72.0
offset_bottom = 41.0

[node name="FoodLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 67.25
offset_top = 18.5
offset_right = 107.25
offset_bottom = 41.5
